plymouth (0.9.0-9pexip4) pexip; urgency=low

  * Reinstate systemd support

 -- John-Mark Bell <jmb@pexip.com>  Tue, 24 Apr 2018 19:48:00 +0100

plymouth (0.9.0-9pexip3) pexip; urgency=low

  * debian/plymouth.maintscript: Remove redundant upstart config on upgrade 

 -- John-Mark Bell <jmb@pexip.com>  Mon, 05 Jun 2017 16:16:12 +0100

plymouth (0.9.0-9pexip2) pexip; urgency=low

  * debian/plymouth.plymouth-stop.upstart, debian/rules: 
    Ensure plymouth is stopped once boot has completed.
  * debian/patches/0003-default-theme.patch: Default to details
  * debian/patches/0008-show-delay.patch: Adjust context

 -- John-Mark Bell <jmb@pexip.com>  Mon, 08 May 2017 18:41:07 +0100

plymouth (0.9.0-9pexip1) pexip; urgency=low

  * Migrate to Jessie
  * debian/plymouth.preinst: Prepare transition of
    /etc/init.d/plymouth(-log) from symlink to conffile

 -- John-Mark Bell <jmb@pexip.com>  Wed, 22 Mar 2017 19:11:48 +0000

plymouth (0.9.0-9) unstable; urgency=medium

  [ Laurent Bigonville ]
  * debian/control: Add a dependency against init-system-helpers as we are
    explicitly using deb-systemd-helper in the plymouth postinst script
    (Closes: #767937)
  * debian/local/plymouth.hook: Test if the plugin is present on disk before
    trying to copy it to the initramfs (Closes: #767170)
  * debian/control: Reword the package description. (Closes: #768350)
    Thanks to Justin B Rye <justin.byam.rye@gmail.com>
  * debian/local/plymouth.hook: Properly copy .plymouth file into the
    initramfs for themes that are not shipping images, this should fix the
    tribar theme.

  [ Sjoerd Simons ]
  * debian/patches/debian/patches/utils-Don-t-create-unix-sockets-non-blocking.patch:
    + Added. Don't open unix socket connections as non-blocking as the read
    function assume blocking sockets. Fixes plymouth failing to query the
    password from the user  (Closes: #763276)

 -- Sjoerd Simons <sjoerd@debian.org>  Mon, 17 Nov 2014 22:42:50 +0100
