@@ -9,10 +9,8 @@ Build-Depends:
  dh-autoreconf,
  dh-systemd,
  docbook-xsl,
- libdbus-1-dev,
  libdrm-dev,
  libgtk2.0-dev,
- libncursesw5-dev,
  libpango1.0-dev,
  libpng-dev,
  libudev-dev,
