@@ -1,13 +1,0 @@
-# plymouth-log - Flush boot log to disk
-#
-# plymouth buffers console messages during boot, once the filesystem
-# is up they should be flushed to the boot log on disk and further
-# messages written directly to it.
-
-description	"Flush boot log to disk"
-
-start on filesystem
-
-task
-
-exec /bin/plymouth update-root-fs --read-write
