@@ -35,8 +35,7 @@ override_dh_auto_configure:
 		--with-system-root-install \
 		--without-rhgb-compat-link \
 		--with-boot-tty=/dev/tty7 \
-		--with-shutdown-tty=/dev/tty7 \
-		--enable-upstart-monitoring
+		--with-shutdown-tty=/dev/tty7
 
 override_dh_auto_install:
 	dh_auto_install
@@ -73,10 +72,8 @@ override_dh_autoreconf:
 	dh_autoreconf --as-needed
 
 override_dh_installinit:
-	dh_installinit --noscripts
-	dh_installinit --noscripts --name=plymouth-log
-	dh_installinit --noscripts --name=plymouth-stop
-	dh_installinit --noscripts --name=plymouth-upstart-bridge
+	dh_installinit --no-start -- start . 2 3 4 5 . stop . 0 6 .
+	dh_installinit --no-start --name=plymouth-log -- start . S .
 
 override_dh_link:
 	# correcting symlink targets
