@@ -1,6 +1,7 @@
 plymouth (0.9.0-9pexip4) pexip; urgency=low
 
   * Reinstate systemd support
+  * Remove upstart support
 
  -- John-Mark Bell <jmb@pexip.com>  Tue, 24 Apr 2018 19:48:00 +0100
 
